      sdcard.
    - Visualize networks around your position with maps.
    - Needs GPS position found to work, either for maps and for scanning wifis.

v1.1

    - Saves last position visited and resets it when application is restarted.
      This will not make a scan for wifis, but stored ones will be visible on
      the map anyway.

    - Can change the meters span that triggers a scan, and the max wifis visible
      on the map.
      
    - WiFis SSID now are displayed near the dots. This can be toggled by menu.
    
    - "Follow ME", can be disabled, but is not saved to preferences: at startup
      it needs the position or it will remain in coords 0,0
      
v1.2

    - Introduced the quadrant view: many wifis in the same screen gets wrapped
      on a bigger dot, still divided between red and green.
      Should improve performance with big numbers (100+).
      This is activated also only when on a zoom level far enough.
    
    - WiFis are updated in a better way. Before all the record was updated only
      when a bigger level (signal strenght) was found. Now for that case only
      "lan, lon, alt, level" are updated, while all other information are always
      updated (frequency, capabilities, ssid...) when the wifi is detected,
      even if ad worse level.
      
    - Changed localization method
    
v1.3

    - Bugfix: on quit application was halting unexpectedly

v1.4

	- Added transparency to circles
	
	- Big circles: they don't take all the map when it's fully zoomed out
	  (proportional scaling up).
	  
v1.5

    - Now the scanning is backed into a service independent from the action.
      The service is stopped when clicking the "quit" menu entry.
      (Something like G-Mon does)
      
v1.6

    - Errors shouldn't make the application to quit now. Instead they're
      displayed briefly in a passive pop-up that hides in a short time.
      
    - New program icon.