@@ -8,4 +8,4 @@
    to preferences.
    Also keep the old "quit" menu method.
    
- - Allow user to switch between street/terrain on Map (another menu switcher)
+ - Find a way (best efficient) to triangulate WiFi positions
